<resources>
    <string name="app_name">StravaBasedApp</string>
    <string name="lastSync" />
    <string name="title_activity_show_data">ShowDataActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="activityname">%1$s - %2$s</string>
    <string name="distanceLabel">Distance</string>
    <string name="speedLabel">Speed</string>
    <string name="timeLabel">Time</string>
    <string name="distance">%1$s km</string>
    <string name="speed">%1$s km/h</string>
    <string name="time">%1$dh %2$dm</string>
    <string name="startActivity">Start activity!</string>
    <string name="distanceTravelled">%1$d km</string>
    <string name="speedAvg">%1%f km/h</string>
    <string name="timePassed">00:00:00</string>
    <string name="start">START!</string>
    <string name="average_speed">Average speed</string>
    <string name="moving_time">Moving time</string>
</resources>